packages/synapse-react-client/src/style/components/_cards.scss
@use '../abstracts/variables' as SRC;
@use 'sass:map';

.SRC-font-size-base,
.SRC-portalCard {
  // Variables
  --baseline-grid: 21px;
  --text-size-base: 16px;
  --text-size-title: 18px;
  --color-divider: #dddddf;
  --color-gray-background: #f9f9f9;
  --text-color-base: #515359;
  --text-color-lighter: #898989;
}

.SRC-font-size-base {
  font-size: var(--text-size-base);
}

.SRC-portalCard {
  display: block;
  font-family: 'DM Sans', sans-serif;
  font-size: var(--text-size-base);
  line-height: var(--baseline-grid);

  border: 1px solid var(--color-divider);
  margin-top: 30px;
  margin-bottom: 30px;

  // default (non-header styles)
  color: var(--text-color-base);
  .SRC-type,
  .SRC-cardThumbnail {
    color: var(--text-color-lighter);
  }
  .SRC-cardThumbnail {
    width: 15%;
    img {
      width: 50%;
      &.iconImg {
        max-width: 75px;
      }
    }
    svg {
      min-height: 55px;
    }
  }
  .SRC-cardMetadata {
    background-color: var(--color-gray-background);
  }

  &.SRC-portalCardHeader {
    color: white;
    margin-top: 0px;
    margin-bottom: 0px;
    background: var(--synapse-primary-action-color);
    @media (min-width: map.get(SRC.$breakpoints, 'medium')) {
      padding-top: 40px;
    }
    @media (max-width: map.get(SRC.$breakpoints, 'medium')) {
      padding-top: 89px;
    }
    .SRC-type {
      color: inherit;
    }
    .SRC-cardThumbnail {
      margin-top: unset;
      margin-bottom: unset;
      padding-top: var(--baseline-grid);
      color: inherit;
      img,
      svg {
        margin-left: 0px;
      }
    }
    a,
    .MuiLink-root {
      color: white !important;
      text-decoration-color: white !important;
    }
    .MuiButton-root {
      border-color: white !important;
      color: white !important;
      height: 24px;

      &:hover {
        background-color: var(--synapse-primary-700);
      }
      &:active {
        background-color: var(--synapse-primary-800);
      }
    }
    .SRC-cardMetadata .SRC-row-label {
      text-transform: uppercase;
      color: white;
    }
    .SRC-cardThumbnail {
      width: 25%;
      img {
        width: 50%;
      }
    }
    .SRC-cardMetadata {
      background-color: inherit;
    }
    @media (min-width: map.get(SRC.$breakpoints, 'medium')) {
      &.isAlignToLeftNav {
        .SRC-cardThumbnail {
          svg,
          img {
            margin-right: 15px;
          }
        }
        .SRC-cardContent {
          padding-left: 32px;
        }
      }
    }
  }
  .SRC-portalCardMain {
    display: flex;
    margin-left: 15px;
    position: relative;
  }

  .SRC-downloadData {
    border-radius: 20px;
    text-align: center;
    height: 40px;
    display: flex;
    justify-content: center;
    align-items: center;
    a {
      font-size: 16px;
      padding: 5px 20px !important;
      color: white;
    }
  }

  h3 {
    margin: var(--baseline-grid) 0 calc(var(--baseline-grid) * 0.5) 0 !important;
    padding: 0;
    font-size: var(--text-size-title) !important;
    line-height: 150%;
    a {
      margin: 0;
      font-weight: 700;
    }
  }

  .SRC-type,
  .SRC-cardThumbnail {
    text-transform: uppercase;
  }

  .SRC-cardThumbnail {
    vertical-align: top;
    margin-top: auto;
    margin-bottom: auto;

    @media (max-width: map.get(SRC.$breakpoints, 'medium')) {
      display: none;
    }
    @media (min-width: map.get(SRC.$breakpoints, 'medium')) {
      max-width: 215px;
      display: inline-block;
    }

    img {
      margin: auto;
      display: block;
    }
    svg {
      width: auto;
      margin: auto;
      display: block;
    }
    > div {
      // icon label
      margin-top: calc(var(--baseline-grid) * 0.5);
      text-align: center;
    }
  }
  .SRC-imageThumbnail {
    vertical-align: top;
    padding-right: 15px;
    max-width: 215px;

    @media (max-width: map.get(SRC.$breakpoints, 'medium')) {
      width: 0%;
      display: none;
    }
    @media (min-width: map.get(SRC.$breakpoints, 'medium')) {
      width: 25%;
      display: inline-block;
    }

    img {
      display: block;
      width: 100%;
    }
    svg {
      width: auto;
      margin: auto;
      display: block;
    }
  }

  .SRC-cardContent {
    padding-left: 0px;
    padding-right: 4%;
    padding-top: var(--baseline-grid);
    margin-bottom: var(--baseline-grid);
    max-width: 850px;
    overflow-x: hidden;
    &.SRC-dataset {
      width: 80%;
    }

    .SRC-author {
      font-style: italic;
      padding-bottom: calc(var(--baseline-grid) * 0.5);
    }

    .SRC-cardAnnotations {
      margin: calc(var(--baseline-grid) * 0.5) 0;
      span {
        background: color-mix(
          in srgb,
          var(--synapse-secondary-action-color) 5%,
          transparent
        );
        display: inline-block;
        padding: 2px 15px 4px 15px;
        margin: 0 10px 5px 0;
        border-radius: 15px;
      }
    }
    @media (min-width: map.get(SRC.$breakpoints, 'medium')) {
      flex: 1;
    }

    .SRC-cardTitleArea {
      display: flex;
      flex-direction: row;
      align-items: flex-start;
      gap: var(--baseline-grid);
      @media (max-width: map.get(SRC.$breakpoints, 'medium')) {
        flex-direction: column;
      }
    }

    .SRC-cardTitleAreaDetails {
      flex-shrink: 0;
      padding-top: var(--baseline-grid);
      @media (max-width: map.get(SRC.$breakpoints, 'medium')) {
        padding-top: 0;
        margin-top: var(--baseline-grid);
      }
    }
  }

  .SRC-cardAction {
    display: inline-block;
    button {
      font-size: 16px;
      color: white;
      display: inline-block;
      height: 40px;
      margin-right: 10px;
      padding: 5px 20px !important;
    }
  }

  .SRC-cardMetadata {
    display: block;
    padding-top: var(--baseline-grid);
    padding-bottom: var(--baseline-grid);
    > * {
      margin-left: 15px;
    }

    &.hasIcon {
      @media (min-width: map.get(SRC.$breakpoints, 'medium')) {
        padding-left: 15%;
        padding-right: 15%;
      }
    }
    .row {
      margin: 5px !important;
      > * {
        min-width: 100px;
      }
      & .extraWide {
        min-width: 150px;
      }
    }
    .SRC-row-label {
      white-space: nowrap;
      color: var(--text-color-lighter);
      text-transform: uppercase;
      margin-right: 40px;
    }
    .SRC-row-data {
      font-weight: 400;
      p {
        margin-bottom: 0;
      }
      a {
        font-size: 14px !important;
      }
    }
    .SRC-cardMetadata-column1 {
      min-width: 140px;
      width: 1px; /* Shrink-wrap to content */
    }
    .SRC-cardMetadata-column2 {
      width: auto; /* Take remaining space */
    }
  }

  &.SRC-typeDataset {
    // single row metadata for dataset type
    .row {
      display: inline-block;
    }
    .row > * {
      min-width: 0;
    }
    .SRC-row-data {
      padding-right: calc(var(--baseline-grid) * 2);
    }
  }

  &.SRC-typeFunder {
    .SRC-cardThumbnail {
      display: inline;
      float: right;
      img {
        width: 65%;
      }
    }
    .SRC-cardContent {
      max-width: 100%;
      width: 90% !important;
      margin-left: calc(var(--baseline-grid) * 2);
      .SRC-website a {
        display: inline-block;
        font-size: var(--text-size-base);
        padding-bottom: calc(var(--baseline-grid) * 0.5);
      }
    }
    .SRC-cardAction {
      margin: var(--baseline-grid) 0 var(--baseline-grid)
        calc(var(--baseline-grid) * 2);
      a {
        display: inline-flex;
        padding: 5px 20px;
        justify-content: center;
        align-items: center;
        height: 40px;
      }
    }
  }

  &.SRC-typeTool {
    .SRC-cardAction {
      margin: var(--baseline-grid) 0 var(--baseline-grid) 15%;
    }
  }
}

.SRC-cardRowDesktop {
  > td {
    padding-top: 5px;
    padding-bottom: 5px;
    padding-left: 0px;
    padding-right: 20px;
  }
}

// every two row elements represents a key-value
// this adds spacing between every two elements
.SRC-cardRowMobile:nth-child(even) {
  > td {
    padding-bottom: 10px;
  }
}

// TODO: this should be removed in the future
.SRC-description-dataset {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  p.SRC-description-text {
    flex-basis: 65%;
    display: inline-block;
    padding-right: 15px;
  }
  div button {
    white-space: nowrap;
  }
}

.cardContainer {
  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.05);
}

.QuerySortSelector {
  .sort-by-label {
    margin: 0px 2px;
  }
  .react-select-container {
    min-width: 250px;
    .form-control {
      padding: 0px;
      height: 37px;
      margin-bottom: 0px;
    }
  }
}

